johannes feedback